{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 126,
  "lineage": "e7266fc5-ac17-542a-ddf4-0394a28a1a66",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/frontendIPConfigurations/frontend",
                "name": "frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/publicIPAddresses/ts-test-pip-lb"
              }
            ],
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb",
            "location": "francecentral",
            "name": "ts-test-lb",
            "resource_group_name": "ts-test-rg-shared",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb",
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "moodle",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/backendAddressPools/backend-moodle",
            "loadbalancer_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb",
            "name": "backend-moodle"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/probes/probe-http",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb",
            "name": "probe-http",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/login/index.php"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/backendAddressPools/backend-moodle"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 80,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/loadBalancingRules/rule-http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb",
            "name": "rule-http",
            "probe_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/probes/probe-http",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.moodle",
            "azurerm_lb_probe.http",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/backendAddressPools/backend-moodle"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 443,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/loadBalancingRules/rule-https",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb",
            "name": "rule-https",
            "probe_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/loadBalancers/ts-test-lb/probes/probe-http",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.moodle",
            "azurerm_lb_probe.http",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dev_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/networkInterfaces/ts-test-nic-luka.lukic",
            "internal_domain_name_suffix": "mo2sbsbsdl0edo55e4qhl4wu3d.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic/subnets/snet-app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "ts-test-nic-luka.lukic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "ts-test-rg-luka.lukic",
            "tags": {
              "environment": "testing",
              "owner": "luka.lukic",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_subnet.dev_app",
            "azurerm_virtual_network.dev"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/networkInterfaces/ts-test-nic-marko.markovic",
            "internal_domain_name_suffix": "j03ai5plhwverhpjo1rc04tz5a.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic/subnets/snet-app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "ts-test-nic-marko.markovic",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "ts-test-rg-marko.markovic",
            "tags": {
              "environment": "testing",
              "owner": "marko.markovic",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_subnet.dev_app",
            "azurerm_virtual_network.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/networkInterfaces/ts-test-nic-jump",
            "internal_domain_name_suffix": "iunqyfm2cqfunivsvl3nt1f0hh.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/publicIPAddresses/ts-test-pip-jump",
                "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/subnets/snet-mgmt"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "ts-test-nic-jump",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "ts-test-rg-shared",
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.jump",
            "azurerm_resource_group.shared",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lead",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ana.anic",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/networkInterfaces/ts-test-nic-lead-ana.anic",
            "internal_domain_name_suffix": "iunqyfm2cqfunivsvl3nt1f0hh.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/subnets/snet-mgmt"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "name": "ts-test-nic-lead-ana.anic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "ts-test-rg-shared",
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.shared",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/networkSecurityGroups/ts-test-nsg-luka.lukic",
            "location": "francecentral",
            "name": "ts-test-nsg-luka.lukic",
            "resource_group_name": "ts-test-rg-luka.lukic",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-http-from-lb",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-from-mgmt",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-all-inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "testing",
              "owner": "luka.lukic",
              "project": "techsprint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/networkSecurityGroups/ts-test-nsg-marko.markovic",
            "location": "francecentral",
            "name": "ts-test-nsg-marko.markovic",
            "resource_group_name": "ts-test-rg-marko.markovic",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-http-from-lb",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-from-mgmt",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-all-inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "testing",
              "owner": "marko.markovic",
              "project": "techsprint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/networkSecurityGroups/ts-test-nsg-mgmt",
            "location": "francecentral",
            "name": "ts-test-nsg-mgmt",
            "resource_group_name": "ts-test-rg-shared",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-http-inbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/publicIPAddresses/ts-test-pip-jump",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.111.10.175",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "ts-test-pip-jump",
            "resource_group_name": "ts-test-rg-shared",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/publicIPAddresses/ts-test-pip-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.216.166.15",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "ts-test-pip-lb",
            "resource_group_name": "ts-test-rg-shared",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ts-test-rg-luka.lukic",
            "virtual_network_name": "ts-test-vnet-luka.lukic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_virtual_network.dev"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ts-test-rg-marko.markovic",
            "virtual_network_name": "ts-test-vnet-marko.markovic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_virtual_network.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/subnets/snet-mgmt",
            "name": "snet-mgmt",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ts-test-rg-shared",
            "virtual_network_name": "ts-test-vnet-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.shared",
            "azurerm_virtual_network.mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic/subnets/snet-app",
            "network_security_group_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/networkSecurityGroups/ts-test-nsg-luka.lukic",
            "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic/subnets/snet-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.dev",
            "azurerm_resource_group.dev",
            "azurerm_subnet.dev_app",
            "azurerm_virtual_network.dev"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic/subnets/snet-app",
            "network_security_group_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/networkSecurityGroups/ts-test-nsg-marko.markovic",
            "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic/subnets/snet-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.dev",
            "azurerm_resource_group.dev",
            "azurerm_subnet.dev_app",
            "azurerm_virtual_network.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/subnets/snet-mgmt",
            "network_security_group_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/networkSecurityGroups/ts-test-nsg-mgmt",
            "subnet_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/subnets/snet-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.mgmt",
            "azurerm_resource_group.shared",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c820b963-1a32-41f4-bbff-27a075fad4eb",
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic",
            "location": "francecentral",
            "name": "ts-test-vnet-luka.lukic",
            "resource_group_name": "ts-test-rg-luka.lukic",
            "tags": {
              "environment": "testing",
              "owner": "luka.lukic",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7d04ba4e-3deb-48aa-9de9-76e22d7a79f8",
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic",
            "location": "francecentral",
            "name": "ts-test-vnet-marko.markovic",
            "resource_group_name": "ts-test-rg-marko.markovic",
            "tags": {
              "environment": "testing",
              "owner": "marko.markovic",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "150c1b45-149c-460b-a2b2-aafad9ecba3f",
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt",
            "location": "francecentral",
            "name": "ts-test-vnet-mgmt",
            "resource_group_name": "ts-test-rg-shared",
            "tags": {
              "environment": "testing",
              "project": "techsprint"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "dev_to_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic/virtualNetworkPeerings/peer-luka.lukic-to-mgmt",
            "name": "peer-luka.lukic-to-mgmt",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt",
            "resource_group_name": "ts-test-rg-luka.lukic",
            "use_remote_gateways": false,
            "virtual_network_name": "ts-test-vnet-luka.lukic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.shared",
            "azurerm_virtual_network.dev",
            "azurerm_virtual_network.mgmt"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic/virtualNetworkPeerings/peer-marko.markovic-to-mgmt",
            "name": "peer-marko.markovic-to-mgmt",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt",
            "resource_group_name": "ts-test-rg-marko.markovic",
            "use_remote_gateways": false,
            "virtual_network_name": "ts-test-vnet-marko.markovic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.shared",
            "azurerm_virtual_network.dev",
            "azurerm_virtual_network.mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "mgmt_to_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "luka.lukic",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/virtualNetworkPeerings/peer-mgmt-to-luka.lukic",
            "name": "peer-mgmt-to-luka.lukic",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-luka.lukic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-luka.lukic",
            "resource_group_name": "ts-test-rg-shared",
            "use_remote_gateways": false,
            "virtual_network_name": "ts-test-vnet-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.shared",
            "azurerm_virtual_network.dev",
            "azurerm_virtual_network.mgmt"
          ]
        },
        {
          "index_key": "marko.markovic",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-shared/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-mgmt/virtualNetworkPeerings/peer-mgmt-to-marko.markovic",
            "name": "peer-mgmt-to-marko.markovic",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/e4101d62-0536-4bd2-8dc8-e6693f134604/resourceGroups/ts-test-rg-marko.markovic/providers/Microsoft.Network/virtualNetworks/ts-test-vnet-marko.markovic",
            "resource_group_name": "ts-test-rg-shared",
            "use_remote_gateways": false,
            "virtual_network_name": "ts-test-vnet-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.shared",
            "azurerm_virtual_network.dev",
            "azurerm_virtual_network.mgmt"
          ]
        }
      ]
    }
  ]
}